# sfml-game

./: .token.txt  CMakeLists.txt  sfml.cpp
data/: config_file.cpp  config_file.h
data/json/: exit_game_messagebox.json  exit_messagebox.json  game_over_messagebox.json  new_game_messagebox.json  resume_messagebox.json
src/background/: background.cpp  background.h
src/game/: game.cpp  game.h
src/game/custom_keyboard/: custom_keyboard.cpp  custom_keyboard.h
src/game/main_game_components/: main_game_components.cpp  main_game_components.h
src/main_game/: main_game.cpp  main_game.h
src/main_game/bomb/: bomb.cpp  bomb.h  fire.cpp  fire.h
src/main_game/bomb/click_bomb/: click_bomb.cpp  click_bomb.h
src/main_game/bomb/time_bomb/: standard_time_bomb.cpp  standard_time_bomb.h
src/main_game/bomb/time_bomb/heart_bomb/: heart_bomb.cpp  heart_bomb.h
src/main_game/bomb/time_bomb/random_bomb/: random_bomb.cpp  random_bomb.h
src/main_game/box/: box.cpp  box.h  box_menager.cpp  box_menager.h  data_classes.cpp  data_classes.h
src/main_game/down_panel/: down_panel.cpp  down_panel.h  down_panel_elements.cpp  down_panel_elements.h
src/main_game/player/: player.cpp  player.h
src/main_game/timer/: timer.cpp  timer.h
src/main_menu/: main_menu.h
src/menu/: menu.cpp  menu.h
src/menu/main_menu/: main_menu.cpp  main_menu.h
src/menu/main_menu/base_main_menu/: base_main_menu.cpp  base_main_menu.h
src/menu/main_menu/main_menu_layout/: main_menu_layout.cpp  main_menu_layout.h
src/message_box/: message_box.cpp  message_box.h
src/picture/: game_picture.cpp  game_picture.h  picture.cpp  picture.h
src/player/: player.cpp  player.h
src/position_widget_menager/: position_widget_menager.cpp  position_widget_menager.h
themes/: menu.style  messagebox.style
